[gd_scene load_steps=3 format=3 uid="uid://030eebrjgld3"]

[ext_resource type="Script" path="res://UI/main_menu/sub_menus/create_subm.gd" id="1_2ncxo"]
[ext_resource type="Theme" uid="uid://j4j5fa0l3vp2" path="res://UI/main_menu/main_menu_theme.tres" id="1_eplpv"]

[node name="create_subm" type="ColorRect" node_paths=PackedStringArray("list", "nom_partie", "Moy", "Med", "player_list")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.666667)
script = ExtResource("1_2ncxo")
list = NodePath("VBoxContainer/HBoxContainer/ColorRect/OptionButton")
nom_partie = NodePath("VBoxContainer/Nom_Partie")
Moy = NodePath("VBoxContainer/Moyenne")
Med = NodePath("VBoxContainer/Mediane")
player_list = NodePath("Player_List")

[node name="Player_List" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 851.0
offset_top = 189.0
offset_right = 1160.0
offset_bottom = 537.0
theme = ExtResource("1_eplpv")

[node name="Player1" type="HBoxContainer" parent="Player_List"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Player_List/Player1"]
layout_mode = 2
text = "Joueur 1 :"

[node name="pseudo_joueur1" type="TextEdit" parent="Player_List/Player1"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
placeholder_text = "Joueur 1"

[node name="Player2" type="HBoxContainer" parent="Player_List"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Player_List/Player2"]
layout_mode = 2
text = "Joueur 2 :"

[node name="pseudo_joueur2" type="TextEdit" parent="Player_List/Player2"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
placeholder_text = "Joueur 2"

[node name="Player3" type="HBoxContainer" parent="Player_List"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Player_List/Player3"]
layout_mode = 2
text = "Joueur 3 :"

[node name="pseudo_joueur3" type="TextEdit" parent="Player_List/Player3"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
placeholder_text = "Joueur 3"

[node name="Player4" type="HBoxContainer" parent="Player_List"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Player_List/Player4"]
layout_mode = 2
text = "Joueur 4 :"

[node name="pseudo_joueur4" type="TextEdit" parent="Player_List/Player4"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
placeholder_text = "Joueur 4"

[node name="Player5" type="HBoxContainer" parent="Player_List"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Player_List/Player5"]
layout_mode = 2
text = "Joueur 5 :"

[node name="pseudo_joueur5" type="TextEdit" parent="Player_List/Player5"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
placeholder_text = "Joueur 5"

[node name="Player6" type="HBoxContainer" parent="Player_List"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Player_List/Player6"]
layout_mode = 2
text = "Joueur 6 :"

[node name="pseudo_joueur6" type="TextEdit" parent="Player_List/Player6"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
placeholder_text = "Joueur 6"

[node name="Player7" type="HBoxContainer" parent="Player_List"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Player_List/Player7"]
layout_mode = 2
text = "Joueur 7 :"

[node name="pseudo_joueur7" type="TextEdit" parent="Player_List/Player7"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
placeholder_text = "Joueur 7"

[node name="Player8" type="HBoxContainer" parent="Player_List"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Player_List/Player8"]
layout_mode = 2
text = "Joueur 8 :"

[node name="pseudo_joueur8" type="TextEdit" parent="Player_List/Player8"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
placeholder_text = "Joueur 8"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -110.0
offset_right = 150.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_eplpv")
theme_override_constants/separation = 8

[node name="Nom_Partie" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_eplpv")
placeholder_text = "Nom de la partie..."
scroll_fit_content_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Nombre Joueurs :"

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -17.5
offset_right = 51.0
offset_bottom = 17.5
grow_vertical = 2
theme = ExtResource("1_eplpv")
item_count = 7
popup/item_0/text = "2"
popup/item_0/id = 1
popup/item_1/text = "3"
popup/item_1/id = 2
popup/item_2/text = "4"
popup/item_2/id = 3
popup/item_3/text = "5"
popup/item_3/id = 4
popup/item_4/text = "6"
popup/item_4/id = 5
popup/item_5/text = "7"
popup/item_5/id = 6
popup/item_6/text = "8"
popup/item_6/id = 7

[node name="Moyenne" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "Moyenne"

[node name="Mediane" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "Mediane
"

[node name="Retour" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Retour"

[connection signal="text_changed" from="Player_List/Player1/pseudo_joueur1" to="." method="_on_pseudo_joueur_1_text_changed"]
[connection signal="text_changed" from="Player_List/Player2/pseudo_joueur2" to="." method="_on_pseudo_joueur_2_text_changed"]
[connection signal="text_changed" from="Player_List/Player3/pseudo_joueur3" to="." method="_on_pseudo_joueur_3_text_changed"]
[connection signal="text_changed" from="Player_List/Player4/pseudo_joueur4" to="." method="_on_pseudo_joueur_4_text_changed"]
[connection signal="text_changed" from="Player_List/Player5/pseudo_joueur5" to="." method="_on_pseudo_joueur_5_text_changed"]
[connection signal="text_changed" from="Player_List/Player6/pseudo_joueur6" to="." method="_on_pseudo_joueur_6_text_changed"]
[connection signal="text_changed" from="Player_List/Player7/pseudo_joueur7" to="." method="_on_pseudo_joueur_7_text_changed"]
[connection signal="text_changed" from="Player_List/Player8/pseudo_joueur8" to="." method="_on_pseudo_joueur_8_text_changed"]
[connection signal="text_changed" from="VBoxContainer/Nom_Partie" to="." method="_on_nom_partie_text_changed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/ColorRect/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="VBoxContainer/Moyenne" to="." method="_on_moyenne_pressed"]
[connection signal="pressed" from="VBoxContainer/Mediane" to="." method="_on_mediane_pressed"]
[connection signal="pressed" from="VBoxContainer/Retour" to="." method="_on_retour_pressed"]
